[gd_scene load_steps=10 format=3 uid="uid://d0dtnmrnqheaw"]

[ext_resource type="Script" uid="uid://bsro832w2eag6" path="res://Escenas/Scripts/menu.gd" id="1_7m3vj"]
[ext_resource type="Texture2D" uid="uid://nltta3mao33k" path="res://Escenas/texturas/fondos/imagen1.jpg" id="2_l78xl"]
[ext_resource type="Texture2D" uid="uid://crccg32llybvf" path="res://Escenas/texturas/titulo/INFERAET1 1.png" id="3_q6gr2"]
[ext_resource type="Texture2D" uid="uid://ou50gqhsarx3" path="res://Escenas/texturas/titulo/INFERAET2.png" id="4_megjb"]
[ext_resource type="Texture2D" uid="uid://cj2ofxkgxlemv" path="res://Escenas/texturas/titulo/INFERAET3.png" id="5_yj7i3"]
[ext_resource type="Texture2D" uid="uid://bacldo1u5b1c0" path="res://Escenas/texturas/btones/bnormal (1).png" id="6_yj7i3"]
[ext_resource type="Texture2D" uid="uid://bcmnmcdhinle5" path="res://Escenas/texturas/btones/bpresionado (1).png" id="7_vtuqf"]
[ext_resource type="FontFile" uid="uid://dd4ysv6kka1ti" path="res://font/Cinzel-Bold.otf" id="8_vtuqf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vtuqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q6gr2")
}, {
"duration": 1.0,
"texture": ExtResource("4_megjb")
}, {
"duration": 1.0,
"texture": ExtResource("5_yj7i3")
}],
"loop": true,
"name": &"titulo",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m3vj")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24705882, 0.15294118, 0.36862746, 1)

[node name="FondoImagen" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l78xl")
expand_mode = 1

[node name="CajaBotones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -231.0
offset_right = 190.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Jugar" type="TextureButton" parent="CajaBotones"]
layout_mode = 2
texture_normal = ExtResource("6_yj7i3")
texture_pressed = ExtResource("7_vtuqf")

[node name="Configuracion" type="TextureButton" parent="CajaBotones"]
layout_mode = 2
texture_normal = ExtResource("6_yj7i3")
texture_pressed = ExtResource("7_vtuqf")

[node name="Salir" type="TextureButton" parent="CajaBotones"]
layout_mode = 2
texture_normal = ExtResource("6_yj7i3")
texture_pressed = ExtResource("7_vtuqf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(573, 358)
sprite_frames = SubResource("SpriteFrames_vtuqf")
animation = &"titulo"
frame_progress = 0.22192198

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 519.0
offset_right = 642.0
offset_bottom = 568.0
theme_override_fonts/font = ExtResource("8_vtuqf")
theme_override_font_sizes/font_size = 27
text = "configuraci√≥n"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 640.0
offset_right = 597.0
offset_bottom = 689.0
theme_override_fonts/font = ExtResource("8_vtuqf")
theme_override_font_sizes/font_size = 27
text = "salir"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 411.0
offset_right = 708.0
offset_bottom = 444.0
theme_override_fonts/font = ExtResource("8_vtuqf")
theme_override_font_sizes/font_size = 27
text = "jugar"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CajaBotones/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CajaBotones/Configuracion" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="CajaBotones/Salir" to="." method="_on_salir_pressed"]
